сделал адаптив страницы поломок

--- a/app/index.html
+++ b/app/index.html
@@ -389,60 +389,64 @@
                 </div>
             </div>
         </section>
-        <!--
+
         <section class="reviews">
             <h3 class="brands__title title">Реальные отзывы</h3>
             <div class="container">
                 <div class="reviews__inner">
-                    <div class="reviews__slider reviews-slider">
-                        <div class="reviews-slider__item">
-                            <span class="reviews-slider__item-name">Петров Иван</span>
-                            <div class="reviews-slider__item-box">
-                                <span class="reviews-slider__item-date">10 августа 2021</span>
-                                <div class="star" data-rateyo-rating="4"></div>
-                            </div>
-                            <p class="reviews-slider__item-text">
-                                Качественно, быстро, недорого! Мастер быстро разобрался в чем проблема, отремонтировали в срок и качественно! Дали гарантию. Вежливые ребята, смышленые. Стоимость не завышена.
-                            </p>
-                            <span class="reviews-slider__item-bottom">
+                    <div class="reviews__slider reviews-slider swiper">
+                        <div class="swiper-wrapper">
+
+                            <div class="reviews-slider__item  swiper-slide">
+                                <span class="reviews-slider__item-name">Петров Иван</span>
+                                <div class="reviews-slider__item-box">
+                                    <span class="reviews-slider__item-date">10 августа 2021</span>
+                                    <div class="star" data-rateyo-rating="4"></div>
+                                </div>
+                                <p class="reviews-slider__item-text">
+                                    Качественно, быстро, недорого! Мастер быстро разобрался в чем проблема, отремонтировали в срок и качественно! Дали гарантию. Вежливые ребята, смышленые. Стоимость не завышена.
+                                </p>
+                                <span class="reviews-slider__item-bottom">
                             Читать на <a href="#" class="reviews-slider__item-link">Яндекс. Отзывах</a></span>
-                        </div>
-                        <div class="reviews-slider__item">
-                            <span class="reviews-slider__item-name">Елена Горюхалова</span>
-                            <div class="reviews-slider__item-box">
-                                <span class="reviews-slider__item-date">30 декабря 2021</span>
-                                <div class="star" data-rateyo-rating="5"></div>
                             </div>
-                            <p class="reviews-slider__item-text">
-                                Самый лучший сервис! Мастера супер!Быстрый и качественный ремонт! Всем советую!
-                            </p>
-                            <span class="reviews-slider__item-bottom">
+                            <div class="reviews-slider__item swiper-slide">
+                                <span class="reviews-slider__item-name">Елена Горюхалова</span>
+                                <div class="reviews-slider__item-box">
+                                    <span class="reviews-slider__item-date">30 декабря 2021</span>
+                                    <div class="star" data-rateyo-rating="5"></div>
+                                </div>
+                                <p class="reviews-slider__item-text">
+                                    Самый лучший сервис! Мастера супер!Быстрый и качественный ремонт! Всем советую!
+                                </p>
+                                <span class="reviews-slider__item-bottom">
                             Читать на <a href="#" class="reviews-slider__item-link">Яндекс. Отзывах</a></span>
-                        </div>
-                        <div class="reviews-slider__item">
-                            <span class="reviews-slider__item-name">Алина Г.</span>
-                            <div class="reviews-slider__item-box">
-                                <span class="reviews-slider__item-date">30 декабря 2021</span>
-                                <div class="star" data-rateyo-rating="5"></div>
                             </div>
-                            <p class="reviews-slider__item-text">
-                                Очень хороший сервиз! не дорогое обслуживание, всё качественно и быстро!
-                            </p>
-                            <span class="reviews-slider__item-bottom">
+                            <div class="reviews-slider__item swiper-slide">
+                                <span class="reviews-slider__item-name">Алина Г.</span>
+                                <div class="reviews-slider__item-box">
+                                    <span class="reviews-slider__item-date">30 декабря 2021</span>
+                                    <div class="star" data-rateyo-rating="5"></div>
+                                </div>
+                                <p class="reviews-slider__item-text">
+                                    Очень хороший сервиз! не дорогое обслуживание, всё качественно и быстро!
+                                </p>
+                                <span class="reviews-slider__item-bottom">
                             Читать на <a href="#" class="reviews-slider__item-link">Яндекс. Отзывах</a></span>
-                        </div>
-                        <div class="reviews-slider__item">
-                            <span class="reviews-slider__item-name">​ili4ka G</span>
-                            <div class="reviews-slider__item-box">
-                                <span class="reviews-slider__item-date">26 мая 2022</span>
-                                <div class="star" data-rateyo-rating="5"></div>
                             </div>
-                            <p class="reviews-slider__item-text">
-                                Мне понравилось! Быстро, удобно, вежливый персонал.
-                            </p>
-                            <span class="reviews-slider__item-bottom">
+                            <div class="reviews-slider__item swiper-slide">
+                                <span class="reviews-slider__item-name">​ili4ka G</span>
+                                <div class="reviews-slider__item-box">
+                                    <span class="reviews-slider__item-date">26 мая 2022</span>
+                                    <div class="star" data-rateyo-rating="5"></div>
+                                </div>
+                                <p class="reviews-slider__item-text">
+                                    Мне понравилось! Быстро, удобно, вежливый персонал.
+                                </p>
+                                <span class="reviews-slider__item-bottom">
                             Читать на <a href="#" class="reviews-slider__item-link">Яндекс. Отзывах</a></span>
+                            </div>
                         </div>
+                        <div class="swiper-pagination"></div>
                     </div>
                     <div class="reviews-bottom">
                         <a class="reviews-bottom__link" href="#">Оставить свой отзыв</a>
@@ -455,6 +459,7 @@
                 </div>
             </div>
         </section>
+
         <section class="contacts">
             <div class="container">
                 <h3 class="contacts__title title">мы на карте</h3>
@@ -477,7 +482,7 @@
                         </div>
                     </div>
                     <div class="contacts__map">
-                        <iframe class="contacts__map--frame" src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=36672680032" width="1220" height="400" frameborder="0"></iframe>
+                        <iframe class="contacts__map--frame" src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=36672680032" width="100%" height="400" frameborder="0"></iframe>
                     </div>
                 </div>
                 <div class="contacts__text">
@@ -494,6 +499,7 @@
                 </div>
             </div>
         </section>
+
         <footer class="footer">
             <div class="container">
                 <div class="footer__inner">
@@ -584,7 +590,7 @@
                     </p>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </main>
     <script src="js/main.min.js"></script>
 </body>
