--- a/app/xiaomi.html
+++ b/app/xiaomi.html
@@ -48,37 +48,45 @@
         </div>
     </header>
     <main>
-        <section class="breaking-page">
+
+        <section class="brands-page">
             <div class="container">
-                <div class="breaking-page__inner">
-                    <div class="breaking-page__box">
+                <div class="brands-page__inner">
+
+                    <div class="brands-page__box">
                         <img class="brands-page__image" alt="Ремонт телефонов Xiaomi в Краснодаре" src="images/brands/phones/xiaomi.jpg">
-                        <div class="breaking-page__box-inner">
-                            <div class="breaking-page__heading-inner">
-                                <div class="breaking-page__title">Ремонт телефонов Xiaomi в Краснодаре</div>
-                                <div class="breaking-page__subtitle">Сервисный центр "Доктор Гаджет"</div>
+                        <div class="brands-page__box-inner">
+                            <div class="brands-page__heading-inner">
+                                <div class="brands-page__title">Ремонт телефонов Xiaomi в Краснодаре</div>
+                                <div class="brands-page__subtitle">Сервисный центр "Доктор Гаджет"</div>
                                 <img class="brands-page__image-adaptive" alt="Ремонт телефонов Xiaomi в Краснодаре" src="images/brands/phones/xiaomi.jpg">
                             </div>
-                            <div class="breaking-page__columns-inner">
-                                <div class="breaking-page__columns">
-                                    <div class="breaking-page__wrap">
-                                        <div class="breaking-page__wrap-price">
-                                            <p class="breaking-page__text">Стоимость:</p>
-                                            <p class="breaking-page__price">От 1000р</p>
+                            <div class="brands-page__columns-inner">
+                                <div class="brands-page__columns">
+                                    <div class="brands-page__wrap">
+                                        <div class="brands-page__wrap-price">
+                                            <p class="brands-page__text">Стоимость:</p>
+                                            <p class="brands-page__price">От 1000р</p>
                                         </div>
-                                        <div class="breaking-page__wrap-worktime">
-                                            <p class="breaking-page__text">Время работы:</p>
-                                            <p class="breaking-page__worktime">От 30 мин</p>
+                                        <div class="brands-page__wrap-worktime">
+                                            <p class="brands-page__text">Время работы:</p>
+                                            <p class="brands-page__worktime">От 30 мин</p>
                                         </div>
                                     </div>
-                                    <a class="breaking-page__link" href="#">Оставить заявку</a>
+                                    <a class="brands-page__link" href="#">Оставить заявку</a>
                                 </div>
-                                <div class="breaking-page__columns breaking-page__columns-right">
-                                    <p class="breaking-page__text">Телефон:</p>
-                                    <a class="breaking-page__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
-                                    <p class="breaking-page__text">Адрес:</p>
-                                    <p class="breaking-page__adress">2-я Целиноградская ул., 13</p>
-                                    <a class="breaking-page__call" href="tel:+79528119728">Позвонить сейчас</a>
+                                <div class="brands-page__columns breaking-page__columns-right">
+                                    <div class="brands-page__wrap brands-page__wrap-right">
+                                        <div class="brands-page__wrap-phone">
+                                            <p class="brands-page__text">Телефон:</p>
+                                            <a class="brands-page__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                                        </div>
+                                        <div class="brands-page__wrap-adress">
+                                            <p class="brands-page__text">Адрес:</p>
+                                            <p class="brands-page__adress">2-я Целиноградская ул., 13</p>
+                                        </div>
+                                    </div>
+                                    <a class="brands-page__call" href="tel:+79528119728">Позвонить сейчас</a>
                                 </div>
                             </div>
                         </div>
@@ -88,7 +96,7 @@
         </section>
 
 
-        <section class="price">
+        <!--     <section class="price">
             <div class="container">
                 <h3 class="slider-choice__title title">цены на ремонт телефонов Xiaomi </h3>
                 <div class="price__inner">
@@ -194,10 +202,10 @@
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <!-- <button class="price__btn-load">Показать ещё</button> -->
+                    
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--  <section class="slider-choice">
             <div class="container-slider">
